--- a/fuse/bower.json
+++ b/fuse/bower.json
@@ -49,7 +49,8 @@
     "ng-material-datetimepicker": "^1.5.10",
     "clappr": "^0.2.66",
     "angular-translate-storage-cookie": "^2.15.2",
-    "angular-translate-storage-local": "^2.15.2"
+    "angular-translate-storage-local": "^2.15.2",
+    "angular-material-accordion": "^1.0.5"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
