--- a/backend/.env.local
+++ b/backend/.env.local
@@ -45,4 +45,5 @@ PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
 
+USERMODEL_URL=https://usermodel-dev.ehlacademy.org/
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
