--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,12 @@ services:
     container_name: school
     volumes:
       - .:/opt/school_system
+      - /opt/school_system/backend/vendor
+      - /opt/school_system/backend/public/school
+      - /opt/school_system/backend/.env
     environment:
         NODE_ENV: development
+    ports:
+      - "80:80"
+    command: /bin/sh -c "cd backend && php artisan serve --host=0.0.0.0 --port=80"
+
