--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - /opt/school_system/backend/vendor
       - /opt/school_system/backend/public/school
       - /opt/school_system/backend/.env
+      - /var/www/site
     environment:
         NODE_ENV: development
     ports:
       - "80:80"
-    command: /bin/sh -c "cd backend && php artisan serve --host=0.0.0.0 --port=80"
 
