--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "init": "composer install && php artisan cache:clear && php artisan view:clear && php artisan route:clear && composer dumpautoload -o",
+    "start": "php artisan serve",
+    "init": "cp .env.example .env && composer install && php artisan key:generate && php artisan cache:clear && php artisan view:clear && php artisan route:clear && composer dumpautoload -o",
     "dev": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch-poll": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-poll --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
