--- a/fuse/Dockerfile
+++ b/fuse/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:9.9.0-alpine
+FROM node:7
 MAINTAINER Kyo
 RUN mkdir -p /opt/school_system/frontend
 WORKDIR /opt/school_system/frontend
@@ -6,8 +6,8 @@ COPY . .
 
 RUN npm i -g --silent bower && \
     npm i -g --silent gulp && \
-    cd fuse && bower i --allow-root && npm i
+    bower i --allow-root && npm i
 
 
 EXPOSE 3000
-CMD gulp serve
+CMD npm rebuild node-sass && gulp serve
