dev docker build

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,14 +1,12 @@
 version: '3'
 services:
-  school_system:
+  school_system_backend:
     build: 
       context: .
       dockerfile: Dockerfile
-    image: ehla/school_backend
     container_name: school_backend
     volumes:
       - .:/var/www/html
-      - /opt/school_system/backend/vendor
     environment:
         NODE_ENV: development
     tty: true
