--- a/backend/.env.local
+++ b/backend/.env.local
@@ -5,24 +5,24 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ehl_school_system
-DB_USERNAME=homestead
+DB_USERNAME=root
 DB_PASSWORD=secret
 
 DB_CONNECTION=school
-DB_HOST_SCHOOL=127.0.0.1
+DB_HOST_SCHOOL=mysql
 DB_PORT_SCHOOL=3306
 DB_DATABASE_SCHOOL=school_1
-DB_USERNAME_SCHOOL=homestead
+DB_USERNAME_SCHOOL=root
 DB_PASSWORD_SCHOOL=secret
 
 DB_CONNECTION_TESTING=school_testing
-DB_HOST_SCHOOL_TESTING=127.0.0.1
+DB_HOST_SCHOOL_TESTING=mysql
 DB_PORT_SCHOOL_TESTING=3306
 DB_DATABASE_SCHOOL_TESTING=school_testing
-DB_USERNAME_SCHOOL_TESTING=homestead
+DB_USERNAME_SCHOOL_TESTING=root
 DB_PASSWORD_SCHOOL_TESTING=secret
 
 BROADCAST_DRIVER=log
