--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   school_system_backend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile_local
     container_name: school_backend
     volumes:
       - .:/var/www/html
