docker production setup

--- a/fuse/Dockerfile
+++ b/fuse/Dockerfile
@@ -1,13 +1,2 @@
-FROM node:7
-MAINTAINER Kyo
-RUN mkdir -p /opt/school_system/frontend
-WORKDIR /opt/school_system/frontend
-COPY . .
-
-RUN npm i -g --silent bower && \
-    npm i -g --silent gulp && \
-    bower i --allow-root && npm i
-
-
-EXPOSE 3000
-CMD npm rebuild node-sass && gulp serve
+FROM httpd:2.4
+COPY ./build/ /usr/local/apache2/htdocs/
