--- a/backend/Dockerfile_local
+++ b/backend/Dockerfile_local
@@ -1,14 +1,12 @@
-FROM shin1x1/laravel-on-php7-apache
-MAINTAINER Kyo
-
-RUN mkdir -p /var/www/html
+FROM php:7
+RUN apt-get update -y && apt-get install -y openssl zip unzip git
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN docker-php-ext-install pdo mbstring
+RUN docker-php-ext-install pdo_mysql
 WORKDIR /var/www/html
-COPY . .
-COPY .env.local .env
+COPY . /var/www/html
 
-RUN composer install
-
-RUN php artisan config:clear
+RUN chmod 777 storage
 
 CMD php artisan serve  --port=8081 --host=0.0.0.0
 
