--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: school_backend
     volumes:
       - .:/var/www/html
+      - ./storage/app:/var/www/html/storage/app
+      - ./storage/logs:/var/www/html/storage/logs
     environment:
         NODE_ENV: development
     tty: true
