--- a/backend/.env.development
+++ b/backend/.env.development
@@ -18,7 +18,7 @@ DB_USERNAME_SCHOOL=ehlawebusr
 DB_PASSWORD_SCHOOL=JS,J.0>D16GvHZt[(=DrgLk1(=70:bad
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=memcached
+CACHE_DRIVER=array
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
