fix production frontend docker

--- a/backend/Dockerfile_local
+++ b/backend/Dockerfile_local
@@ -6,7 +6,17 @@ RUN docker-php-ext-install pdo_mysql
 WORKDIR /var/www/html
 COPY . /var/www/html
 
+RUN composer install
+
+COPY .env.local .env
+
+RUN php artisan key:generate
+
 RUN chmod 777 storage
+
+RUN php artisan config:clear
+
+RUN php artisan config:cache
 
 CMD php artisan serve  --port=8081 --host=0.0.0.0
 
