--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,9 @@
-FROM shin1x1/laravel-on-php7-apache
-MAINTAINER Kyo
+FROM shakyshane/laravel-php:latest
 
-RUN mkdir -p /var/www/html
-WORKDIR /var/www/html
+COPY composer.lock composer.json /var/www/
+COPY database /var/www/database
+WORKDIR /var/www
+
 COPY . .
 COPY .env.development .env
 
@@ -12,6 +13,10 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php -r "unlink('composer-setup.php');" \
     && php composer.phar install --no-dev --no-scripts \
     && rm composer.phar
+
+RUN chown -R www-data:www-data \
+        /var/www/storage \
+        /var/www/bootstrap/cache
 
 RUN php artisan optimize
 
