fix production frontend docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,15 @@
-FROM shakyshane/laravel-php:latest
+FROM composer/composer:master
 
-COPY composer.lock composer.json /var/www/
-COPY database /var/www/database
-WORKDIR /var/www
-
+COPY composer.lock composer.json /app/
+COPY database /app/database
+WORKDIR /app
+#RUN composer install
 COPY . .
+#RUN rm .env
 COPY .env.development .env
-
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
-    && php -r "if (hash_file('SHA384', 'composer-setup.php') === '55d6ead61b29c7bdee5cccfb50076874187bd9f21f65d8991d46ec5cc90518f447387fb9f76ebae1fbbacf329e583e30') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" \
-    && php composer-setup.php \
-    && php -r "unlink('composer-setup.php');" \
-    && php composer.phar install --no-dev --no-scripts \
-    && rm composer.phar
-
-RUN chown -R www-data:www-data \
-        /var/www/storage \
-        /var/www/bootstrap/cache
-
+RUN php artisan key:generate
+RUN php artisan config:clear
+RUN php artisan config:cache
 RUN php artisan optimize
 
 EXPOSE 80
