--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,14 @@
 FROM composer/composer:master
 
-COPY composer.lock composer.json /app/
-COPY database /app/database
 WORKDIR /app
-#RUN composer install
+
 COPY . .
-#RUN rm .env
 COPY .env.development .env
 RUN php artisan key:generate
 RUN php artisan config:clear
 RUN php artisan config:cache
 RUN php artisan optimize
+
+RUN mkdir -p /app/storage/framework/sessions /app/storage/framework/views /app/storage/framework/cache
 
 EXPOSE 80
