docker production setup

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,6 +1,6 @@
 APP_ENV=production
 APP_KEY=base64:/eLYdB0TV5H1iy1KMbB+OYUEShJQa+qozHVSinhW8mA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
