env local file update

--- a/backend/.env.local
+++ b/backend/.env.local
@@ -5,10 +5,10 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ehl_school_system
-DB_USERNAME=root
+DB_DATABASE=school_1
+DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 DB_CONNECTION=school
