--- a/fuse/bower.json
+++ b/fuse/bower.json
@@ -50,7 +50,8 @@
     "clappr": "^0.2.66",
     "angular-translate-storage-cookie": "^2.15.2",
     "angular-translate-storage-local": "^2.15.2",
-    "angular-material-accordion": "^1.0.5"
+    "angular-material-accordion": "^1.0.5",
+    "file-saver": "^1.3.8"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
