--- a/backend/.env.development
+++ b/backend/.env.development
@@ -4,13 +4,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=db-test.ckjfdmyszhad.ap-southeast-1.rds.amazonaws.com
-DB_PORT=13310
-DB_DATABASE=ehl_user
-DB_USERNAME=billchan
-DB_PASSWORD=4&CdMY-6a9<J934P
-
+DB_CONNECTION=school_0
 DB_HOST_SCHOOL=school-system-rds.ckjfdmyszhad.ap-southeast-1.rds.amazonaws.com
 DB_PORT_SCHOOL=13310
 DB_DATABASE_SCHOOL=school_1
