--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,4 +1,4 @@
-APP_ENV=production
+APP_ENV=development
 APP_KEY=base64:/eLYdB0TV5H1iy1KMbB+OYUEShJQa+qozHVSinhW8mA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
