--- a/backend/.env.development
+++ b/backend/.env.development
@@ -4,10 +4,10 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=school_0
+DB_CONNECTION=mysql
 DB_HOST_SCHOOL=school-system-rds.ckjfdmyszhad.ap-southeast-1.rds.amazonaws.com
 DB_PORT_SCHOOL=13310
-DB_DATABASE_SCHOOL=school_1
+DB_DATABASE_SCHOOL=school_0
 DB_USERNAME_SCHOOL=ehlawebusr
 DB_PASSWORD_SCHOOL=JS,J.0>D16GvHZt[(=DrgLk1(=70:bad
 
