--- a/backend/.env.local
+++ b/backend/.env.local
@@ -4,12 +4,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST_SCHOOL=127.0.0.1
-DB_PORT_SCHOOL=3306
+DB_CONNECTION=school_0
+DB_HOST_SCHOOL=school-system-rds.ckjfdmyszhad.ap-southeast-1.rds.amazonaws.com
+DB_PORT_SCHOOL=13310
 DB_DATABASE_SCHOOL=school_1
-DB_USERNAME_SCHOOL=homestead
-DB_PASSWORD_SCHOOL=secret
+DB_USERNAME_SCHOOL=ehlawebusr
+DB_PASSWORD_SCHOOL=JS,J.0>D16GvHZt[(=DrgLk1(=70:bad
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
