--- a/backend/.env.local
+++ b/backend/.env.local
@@ -4,9 +4,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=school_0
+DB_CONNECTION=mysql
 DB_HOST_SCHOOL=127.0.0.1
-DB_PORT_SCHOOL=3306
+DB_PORT_SCHOOL=33061
 DB_DATABASE_SCHOOL=school_1
 DB_USERNAME_SCHOOL=homestead
 DB_PASSWORD_SCHOOL=secret
