--- a/backend/.env.local
+++ b/backend/.env.local
@@ -5,10 +5,10 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST_SCHOOL=127.0.0.1
+DB_HOST_SCHOOL=10.0.1.21
 DB_PORT_SCHOOL=33061
 DB_DATABASE_SCHOOL=school_1
-DB_USERNAME_SCHOOL=homestead
+DB_USERNAME_SCHOOL=root
 DB_PASSWORD_SCHOOL=secret
 
 BROADCAST_DRIVER=log
