--- a/fuse/docker-compose.yml
+++ b/fuse/docker-compose.yml
@@ -1,13 +1,14 @@
+## DO NOT use docker to run development as the auto refresh plugin keep sync and pull => repeated call stacks ##
+
 version: '3'
 services:
   school_system_frontend:
-    tty: true
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile_local
     container_name: school_frontend
     volumes:
-      - ./src:/opt/school_system/frontend/src
+      - ./src/app:/opt/school_system/frontend/src/app
       - /opt/school_system/frontend/.tmp/serve
     environment:
         NODE_ENV: development
