--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config build/webpack.dev.conf.js",
-    "build": "node build/build.js",
     "build:staging": "node build/build-staging.js"
   },
   "dependencies": {
@@ -21,6 +20,7 @@
     "stylus-loader": "^3.0.2",
     "tiny-cookie": "^2.1.2",
     "vue": "^2.5.2",
+    "vue-loading-overlay": "^2.0.4",
     "vue-modal-dialogs": "^3.0.0",
     "vue-router": "^3.0.1",
     "vuejs-datepicker": "^1.3.0",
