--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "vue-loading-overlay": "^2.0.4",
     "vue-modal-dialogs": "^3.0.0",
     "vue-router": "^3.0.1",
+    "vue-virtual-scroller": "^0.12.0",
     "vuejs-datepicker": "^1.3.0",
     "vuex": "^3.0.1"
   },
