--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "vue-router": "^3.0.1",
     "vue-virtual-scroller": "^0.12.0",
     "vuejs-datepicker": "^1.3.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-map-fields": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
