--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,8 @@
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
