--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "browser-update": "^3.1.13",
     "cross-env": "^5.1.6",
+    "js-file-download": "^0.4.1",
     "moment": "^2.22.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
