--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "school-system",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "cliff <cliff@vivovii.com>",
+  "author": "fukkkuen <fukkkuen@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --watch --progress --config build/webpack.dev.conf.js",
@@ -18,8 +18,7 @@
     "browser-update": "^3.1.13",
     "cross-env": "^5.1.6",
     "moment": "^2.22.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
+    "normalizr": "^3.2.4",
     "svg-innerhtml": "^1.1.0",
     "tiny-cookie": "^2.1.2",
     "vue": "^2.5.2",
@@ -61,15 +60,17 @@
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
