--- a/backend/.env.local.docker
+++ b/backend/.env.local.docker
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST_SCHOOL=school-system-rds.ckjfdmyszhad.ap-southeast-1.rds.amazonaws.com
-DB_PORT_SCHOOL=13310
-DB_DATABASE_SCHOOL=school_0
-DB_USERNAME_SCHOOL=ehlawebusr
-DB_PASSWORD_SCHOOL=JS,J.0>D16GvHZt[(=DrgLk1(=70:bad
+DB_HOST_SCHOOL=db
+DB_PORT_SCHOOL=3306
+DB_DATABASE_SCHOOL=school_1
+DB_USERNAME_SCHOOL=root
+DB_PASSWORD_SCHOOL=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
